deploy: 85e0c30171745eff3d33a88363c67ced5d12b175

--- a/next/src/serenity/builder/create_message.rs.html
+++ b/next/src/serenity/builder/create_message.rs.html
@@ -359,7 +359,7 @@
 <span class="doccomment">/// # use serenity::http::Http;</span>
 <span class="doccomment">/// # use std::sync::Arc;</span>
 <span class="doccomment">/// #</span>
-<span class="doccomment">/// # let http = Arc::new(Http::default());</span>
+<span class="doccomment">/// # let http = Arc::new(Http::new(&quot;token&quot;));</span>
 <span class="doccomment">///</span>
 <span class="doccomment">/// let channel_id = ChannelId(7);</span>
 <span class="doccomment">///</span>
