--- a/next/src/serenity/builder/edit_channel.rs.html
+++ b/next/src/serenity/builder/edit_channel.rs.html
@@ -226,7 +226,7 @@
 <span class="doccomment">/// # use serenity::{http::Http, model::id::ChannelId};</span>
 <span class="doccomment">/// #</span>
 <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-<span class="doccomment">/// #     let http = Http::default();</span>
+<span class="doccomment">/// #     let http = Http::new(&quot;token&quot;);</span>
 <span class="doccomment">/// #     let mut channel = ChannelId(0);</span>
 <span class="doccomment">/// // assuming a channel has already been bound</span>
 <span class="doccomment">/// if let Err(why) = channel.edit(&amp;http, |c| c.name(&quot;new name&quot;).topic(&quot;a test topic&quot;)).await {</span>
@@ -370,7 +370,7 @@
     <span class="doccomment">/// # use std::sync::Arc;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// #     let http = Arc::new(Http::default());</span>
+    <span class="doccomment">/// #     let http = Arc::new(Http::new(&quot;token&quot;));</span>
     <span class="doccomment">/// #     let mut channel = ChannelId(0);</span>
     <span class="doccomment">/// use serenity::model::channel::{PermissionOverwrite, PermissionOverwriteType};</span>
     <span class="doccomment">/// use serenity::model::id::UserId;</span>
