--- a/next/src/serenity/builder/edit_guild.rs.html
+++ b/next/src/serenity/builder/edit_guild.rs.html
@@ -360,7 +360,7 @@
     <span class="doccomment">/// # use serenity::{http::Http, model::id::GuildId};</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// #     let http = Http::default();</span>
+    <span class="doccomment">/// #     let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// #     let mut guild = GuildId(0).to_partial_guild(&amp;http).await?;</span>
     <span class="doccomment">/// use serenity::utils;</span>
     <span class="doccomment">///</span>
@@ -545,7 +545,7 @@
     <span class="doccomment">/// # use serenity::{http::Http, model::id::GuildId};</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// #     let http = Http::default();</span>
+    <span class="doccomment">/// #     let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// #     let mut guild = GuildId(0).to_partial_guild(&amp;http).await?;</span>
     <span class="doccomment">/// use serenity::model::guild::VerificationLevel;</span>
     <span class="doccomment">///</span>
@@ -579,7 +579,7 @@
     <span class="doccomment">/// # use serenity::{http::Http, model::id::GuildId};</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// #     let http = Http::default();</span>
+    <span class="doccomment">/// #     let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// #     let mut guild = GuildId(0).to_partial_guild(&amp;http).await?;</span>
     <span class="doccomment">/// use serenity::model::guild::SystemChannelFlags;</span>
     <span class="doccomment">///</span>
