--- a/next/src/serenity/builder/edit_role.rs.html
+++ b/next/src/serenity/builder/edit_role.rs.html
@@ -221,7 +221,7 @@
 <span class="doccomment">/// # use serenity::{model::id::{ChannelId, GuildId}, http::Http};</span>
 <span class="doccomment">/// # use std::sync::Arc;</span>
 <span class="doccomment">/// #</span>
-<span class="doccomment">/// # let http = Arc::new(Http::default());</span>
+<span class="doccomment">/// # let http = Arc::new(Http::new(&quot;token&quot;));</span>
 <span class="doccomment">/// # let (channel_id, guild_id) = (ChannelId(1), GuildId(2));</span>
 <span class="doccomment">/// #</span>
 <span class="doccomment">/// // assuming a `channel_id` and `guild_id` has been bound</span>
