--- a/next/src/serenity/builder/execute_webhook.rs.html
+++ b/next/src/serenity/builder/execute_webhook.rs.html
@@ -350,7 +350,7 @@
 <span class="doccomment">/// use serenity::utils::Colour;</span>
 <span class="doccomment">///</span>
 <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-<span class="doccomment">/// # let http = Http::default();</span>
+<span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
 <span class="doccomment">/// let url = &quot;https://discord.com/api/webhooks/245037420704169985/ig5AO-wdVWpCBtUUMxmgsWryqgsW3DChbKYOINftJ4DCrUbnkedoYZD0VOH1QLr-S3sV&quot;;</span>
 <span class="doccomment">/// let webhook = http.get_webhook_from_url(url).await?;</span>
 <span class="doccomment">///</span>
@@ -398,7 +398,7 @@
     <span class="doccomment">/// # use serenity::http::Http;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// # let http = Http::default();</span>
+    <span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// # let webhook = http.get_webhook_with_token(0, &quot;&quot;).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// let avatar_url = &quot;https://i.imgur.com/KTs6whd.jpg&quot;;</span>
@@ -425,7 +425,7 @@
     <span class="doccomment">/// # use serenity::http::Http;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// # let http = Http::default();</span>
+    <span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// # let webhook = http.get_webhook_with_token(0, &quot;&quot;).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// let execution = webhook.execute(&amp;http, false, |w| w.content(&quot;foo&quot;)).await;</span>
@@ -539,7 +539,7 @@
     <span class="doccomment">/// # use serenity::http::Http;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// # let http = Http::default();</span>
+    <span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// # let webhook = http.get_webhook_with_token(0, &quot;&quot;).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// let execution = webhook.execute(&amp;http, false, |w| w.content(&quot;hello&quot;).tts(true)).await;</span>
@@ -565,7 +565,7 @@
     <span class="doccomment">/// # use serenity::http::Http;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// # let http = Http::default();</span>
+    <span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// # let webhook = http.get_webhook_with_token(0, &quot;&quot;).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// let execution = webhook.execute(&amp;http, false, |w| w.content(&quot;hello&quot;).username(&quot;hakase&quot;)).await;</span>
@@ -592,7 +592,7 @@
     <span class="doccomment">/// # use serenity::model::channel::MessageFlags;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-    <span class="doccomment">/// # let http = Http::default();</span>
+    <span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// # let webhook = http.get_webhook_with_token(0, &quot;&quot;).await?;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// let execution = webhook</span>
