--- a/next/src/serenity/builder/get_messages.rs.html
+++ b/next/src/serenity/builder/get_messages.rs.html
@@ -131,7 +131,7 @@
 <span class="doccomment">/// # use serenity::http::Http;</span>
 <span class="doccomment">/// #</span>
 <span class="doccomment">/// # async fn run() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {</span>
-<span class="doccomment">/// # let http = Http::default();</span>
+<span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
 <span class="doccomment">/// use serenity::model::id::{ChannelId, MessageId};</span>
 <span class="doccomment">///</span>
 <span class="doccomment">/// // you can then pass it into a function which retrieves messages:</span>
