--- a/next/src/serenity/http/typing.rs.html
+++ b/next/src/serenity/http/typing.rs.html
@@ -133,7 +133,7 @@
 <span class="doccomment">/// #</span>
 <span class="doccomment">/// # fn long_process() {}</span>
 <span class="doccomment">/// # fn main() -&gt; Result&lt;()&gt; {</span>
-<span class="doccomment">/// # let http = Http::default();</span>
+<span class="doccomment">/// # let http = Http::new(&quot;token&quot;);</span>
 <span class="doccomment">/// // Initiate typing (assuming `http` is bound)</span>
 <span class="doccomment">/// let typing = Typing::start(Arc::new(http), 7)?;</span>
 <span class="doccomment">///</span>
