--- a/next/src/serenity/model/channel/channel_category.rs.html
+++ b/next/src/serenity/model/channel/channel_category.rs.html
@@ -278,7 +278,7 @@
     <span class="doccomment">/// # async fn run() {</span>
     <span class="doccomment">/// #     use serenity::http::Http;</span>
     <span class="doccomment">/// #     use serenity::model::id::ChannelId;</span>
-    <span class="doccomment">/// #     let http = Http::default();</span>
+    <span class="doccomment">/// #     let http = Http::new(&quot;token&quot;);</span>
     <span class="doccomment">/// #     let category = ChannelId(1234);</span>
     <span class="doccomment">/// category.edit(&amp;http, |c| c.name(&quot;test&quot;).bitrate(86400)).await;</span>
     <span class="doccomment">/// # }</span>
