--- a/next/src/serenity/model/interactions/application_command.rs.html
+++ b/next/src/serenity/model/interactions/application_command.rs.html
@@ -1868,7 +1868,7 @@
     <span class="doccomment">/// # use std::sync::Arc;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() {</span>
-    <span class="doccomment">/// # let http = Arc::new(Http::default());</span>
+    <span class="doccomment">/// # let http = Arc::new(Http::new(&quot;token&quot;));</span>
     <span class="doccomment">/// use serenity::model::id::ApplicationId;</span>
     <span class="doccomment">/// use serenity::model::interactions::application_command::ApplicationCommand;</span>
     <span class="doccomment">///</span>
@@ -1886,7 +1886,7 @@
     <span class="doccomment">/// # use std::sync::Arc;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # async fn run() {</span>
-    <span class="doccomment">/// # let http = Arc::new(Http::default());</span>
+    <span class="doccomment">/// # let http = Arc::new(Http::new(&quot;token&quot;));</span>
     <span class="doccomment">/// use serenity::model::id::ApplicationId;</span>
     <span class="doccomment">/// use serenity::model::interactions::application_command::{</span>
     <span class="doccomment">///     ApplicationCommand,</span>
