--- a/next/src/serenity/model/channel/private_channel.rs.html
+++ b/next/src/serenity/model/channel/private_channel.rs.html
@@ -751,7 +751,7 @@
     <span class="doccomment">/// # use std::sync::Arc;</span>
     <span class="doccomment">/// #</span>
     <span class="doccomment">/// # fn long_process() {}</span>
-    <span class="doccomment">/// # let http = Arc::new(Http::default());</span>
+    <span class="doccomment">/// # let http = Arc::new(Http::new(&quot;token&quot;));</span>
     <span class="doccomment">/// # let cache = Cache::default();</span>
     <span class="doccomment">/// # let channel = cache.private_channel(ChannelId(7))</span>
     <span class="doccomment">/// #    .ok_or(ModelError::ItemMissing)?;</span>
