deploy: f6d8df2484293c904cc0810a52ae1826a9e358d4

--- a/next/src/serenity/model/guild/member.rs.html
+++ b/next/src/serenity/model/guild/member.rs.html
@@ -1208,7 +1208,7 @@
     <span class="doccomment">/// ```rust,ignore</span>
     <span class="doccomment">/// // assuming there&#39;s a `member` variable gotten from anything.</span>
     <span class="doccomment">/// println!(&quot;The permission bits for the member are: {}&quot;,</span>
-    <span class="doccomment">/// member.permissions().expect(&quot;permissions&quot;).bits);</span>
+    <span class="doccomment">/// member.permissions(&amp;cache).expect(&quot;permissions&quot;).bits());</span>
     <span class="doccomment">/// ```</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// # Errors</span>
