deploy: 427fe74dc1d4c8ea8299a528e3589d6406930b8d

--- a/next/serenity/model/invite/struct.Invite.html
+++ b/next/serenity/model/invite/struct.Invite.html
@@ -42,7 +42,7 @@ channel this invite is for.</p>
 fields may optionally be set.</p>
 <p>See the documentation for the <a href="../../builder/struct.CreateInvite.html" title="CreateInvite"><code>CreateInvite</code></a> builder for information
 on how to use this and the default values that it provides.</p>
-<p>Requires the <a href="../permissions/struct.Permissions.html#associatedconstant.CREATE_INVITE">Create Invite</a> permission.</p>
+<p>Requires the <a href="../permissions/struct.Permissions.html#associatedconstant.CREATE_INSTANT_INVITE">Create Instant Invite</a> permission.</p>
 <h5 id="errors"><a href="#errors">Errors</a></h5>
 <p>If the <code>cache</code> is enabled, returns a <a href="../error/enum.Error.html#variant.InvalidPermissions" title="ModelError::InvalidPermissions"><code>ModelError::InvalidPermissions</code></a>
 if the current user does not have the required <a href="../permissions/index.html">permission</a>.</p>
