--- a/next/serenity/model/permissions/constant.PRESET_GENERAL.html
+++ b/next/serenity/model/permissions/constant.PRESET_GENERAL.html
@@ -12,11 +12,11 @@ to true.</p>
 <li><a href="struct.Permissions.html#associatedconstant.ATTACH_FILES">Attach Files</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.CHANGE_NICKNAME">Change Nickname</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.CONNECT">Connect</a></li>
-<li><a href="struct.Permissions.html#associatedconstant.CREATE_INVITE">Create Invite</a></li>
+<li><a href="struct.Permissions.html#associatedconstant.CREATE_INSTANT_INVITE">Create Instant Invite</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.EMBED_LINKS">Embed Links</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.MENTION_EVERYONE">Mention Everyone</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.READ_MESSAGE_HISTORY">Read Message History</a></li>
-<li><a href="struct.Permissions.html#associatedconstant.READ_MESSAGES">Read Messages</a></li>
+<li><a href="struct.Permissions.html#associatedconstant.VIEW_CHANNEL">View Channel</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.SEND_MESSAGES">Send Messages</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.SEND_TTS_MESSAGES">Send TTS Messages</a></li>
 <li><a href="struct.Permissions.html#associatedconstant.SPEAK">Speak</a></li>
