--- a/next/src/serenity/model/user.rs.html
+++ b/next/src/serenity/model/user.rs.html
@@ -1802,7 +1802,7 @@
     <span class="doccomment">///</span>
     <span class="doccomment">/// // assuming the user has been bound</span>
     <span class="doccomment">/// let permissions =</span>
-    <span class="doccomment">///     Permissions::READ_MESSAGES | Permissions::SEND_MESSAGES | Permissions::EMBED_LINKS;</span>
+    <span class="doccomment">///     Permissions::VIEW_CHANNEL | Permissions::SEND_MESSAGES | Permissions::EMBED_LINKS;</span>
     <span class="doccomment">/// let url = match user.invite_url(&amp;http, permissions).await {</span>
     <span class="doccomment">///     Ok(v) =&gt; v,</span>
     <span class="doccomment">///     Err(why) =&gt; {</span>
