--- a/next/src/serenity/builder/edit_channel.rs.html
+++ b/next/src/serenity/builder/edit_channel.rs.html
@@ -378,7 +378,7 @@
     <span class="doccomment">///</span>
     <span class="doccomment">/// // Assuming a channel has already been bound.</span>
     <span class="doccomment">/// let permissions = vec![PermissionOverwrite {</span>
-    <span class="doccomment">///     allow: Permissions::READ_MESSAGES,</span>
+    <span class="doccomment">///     allow: Permissions::VIEW_CHANNEL,</span>
     <span class="doccomment">///     deny: Permissions::SEND_TTS_MESSAGES,</span>
     <span class="doccomment">///     kind: PermissionOverwriteType::Member(UserId(1234)),</span>
     <span class="doccomment">/// }];</span>
