--- a/next/src/serenity/http/client.rs.html
+++ b/next/src/serenity/http/client.rs.html
@@ -7472,8 +7472,8 @@
 
     <span class="doccomment">/// Retrieves a webhook given its Id.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// This method requires authentication, whereas [`Self::get_webhook_with_token`] and</span>
-    <span class="doccomment">/// [`Self::get_webhook_from_url`] do not.</span>
+    <span class="doccomment">/// This method requires authentication, whereas [`Http::get_webhook_with_token`] and</span>
+    <span class="doccomment">/// [`Http::get_webhook_from_url`] do not.</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// # Examples</span>
     <span class="doccomment">///</span>
