--- a/next/src/serenity/model/permissions.rs.html
+++ b/next/src/serenity/model/permissions.rs.html
@@ -901,7 +901,7 @@
 <span class="doccomment">///</span>
 <span class="doccomment">/// Using this macro</span>
 <span class="doccomment">///</span>
-<span class="doccomment">/// ```rust,no_run</span>
+<span class="doccomment">/// ```ignore</span>
 <span class="doccomment">/// generate_get_permission_names! {</span>
 <span class="doccomment">///     add_reactions: &quot;Add Reactions&quot;,</span>
 <span class="doccomment">///     administrator: &quot;Administrator&quot;</span>
@@ -910,7 +910,7 @@
 <span class="doccomment">///</span>
 <span class="doccomment">/// Generates this implementation:</span>
 <span class="doccomment">///</span>
-<span class="doccomment">/// ```</span>
+<span class="doccomment">/// ```ignore</span>
 <span class="doccomment">/// impl Permissions {</span>
 <span class="doccomment">///     fn get_permission_names(self) -&gt; Vec&lt;&amp;&#39;static str&gt; {</span>
 <span class="doccomment">///         let mut names = Vec::new();</span>
