deploy: 047d4ba057943e7e88cd2cd3eeedd353291818fb

--- a/current/src/serenity/model/channel/guild_channel.rs.html
+++ b/current/src/serenity/model/channel/guild_channel.rs.html
@@ -1947,11 +1947,11 @@
         }
     }
 
-    <span class="doccomment">/// Follows the announcement channel</span>
+    <span class="doccomment">/// Follows the News Channel</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// Requires [Manage Webhook] permissions on the target channel.</span>
     <span class="doccomment">///</span>
-    <span class="doccomment">/// **Note**: Only available on announcement channels.</span>
+    <span class="doccomment">/// **Note**: Only available on news channels.</span>
     <span class="doccomment">///</span>
     <span class="doccomment">/// # Errors</span>
     <span class="doccomment">///</span>
